--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,49 +4,51 @@ version: '3'
 services:
     mariadb:
         container_name: mariadb
-        env_file: .env
-        build: ./requirements/mariadb
-        restart: always
+        env_file: .env                      # .env 파일에서 환경 변수를 로드합니다.
+        build: ./requirements/mariadb       # mariadb 컨테이너를 빌드할 디렉토리를 지정합니다.
+        restart: always                     # 컨테이너 재시작 정책
         networks:
-            - intra
+            - intra                         # "intra"라는 이름의 브리지 네트워크에 연결합니다.
         volumes:
-            - db-v:/var/run/mysqld
+            - db-v:/var/run/mysqld          # 데이터베이스 파일을 보존할 볼륨을 연결합니다.
 
     wordpress:
         container_name: wordpress
-        env_file: .env
-        build: ./requirements/wordpress
-        restart: always
+        env_file: .env                      # .env 파일에서 환경 변수를 로드합니다.
+        build: ./requirements/wordpress     # wordpress 컨테이너를 빌드할 디렉토리를 지정합니다.
+        restart: always                     # 컨테이너 재시작 정책
         volumes:
-            - www-v:/var/www
+            - www-v:/var/www                # 워드프레스 파일을 보존할 볼륨을 연결합니다.
         networks:
-            - intra
+            - intra                         # "intra"라는 이름의 브리지 네트워크에 연결합니다.
         depends_on:
-           - mariadb
+           - mariadb                        # mariadb 컨테이너가 먼저 시작되도록 의존성 설정합니다.
 
     nginx:
         container_name: nginx
-        env_file: .env
-        build: ./requirements/nginx
-        restart: always
+        env_file: .env                      # .env 파일에서 환경 변수를 로드합니다.
+        build: ./requirements/nginx         # nginx 컨테이너를 빌드할 디렉토리를 지정합니다.
+        restart: always                     # 컨테이너 재시작 정책
         ports:
-            - "443:443"
+            - "443:443"                     # 호스트 포트 443와 컨테이너 포트 443을 연결합니다.
         volumes:
-            - www-v:/var/www
+            - www-v:/var/www                # 워드프레스 파일을 보존할 볼륨을 연결합니다.
         networks:
-            - intra
+            - intra                         # "intra"라는 이름의 브리지 네트워크에 연결합니다.
         depends_on:
-            - wordpress
+            - wordpress                     # wordpress 컨테이너가 먼저 시작되도록 의존성 설정합니다.
+
 networks:
-    intra:
-        driver: bridge
+    intra:                                  # "intra"라는 이름의 브리지 네트워크 정의
+        driver: bridge                      # 브리지 네트워크 드라이버
+
 
 volumes:
   db-v:
     name: db-v
     driver: local
     driver_opts:
-      device: '/home/hojsong/data/db'
+      device: '/home/hojsong/data/db'       # 호스트의 /home/hojsong/data/db를 컨테이너의 볼륨으로 바인딩
       type: 'none'
       o: 'bind'
 
@@ -54,6 +56,6 @@ volumes:
     name: www-v
     driver: local
     driver_opts:
-      device: '/home/hojsong/data/wordpress'
+      device: '/home/hojsong/data/wordpress'    # 호스트의 /home/hojsong/data/wordpress를 컨테이너의 볼륨으로 바인딩
       type: 'none'
       o: 'bind'
