--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,14 +5,15 @@ FROM debian:bookworm
 EXPOSE 9000
 
 # 패키지 설치를 위해 패키지 관리자 업데이트 및 필요한 패키지 설치
-RUN apt-get update 
-RUN apt-get upgrade -y \
-&& apt-get install -y lsb-release apt-transport-https ca-certificates curl software-properties-common gnupg2 wget \
-&& curl -fsSL https://packages.sury.org/php/apt.gpg | apt-key add - \
-&& echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/php.list \
-&& apt-get update \
-&& apt-get -y install php7.4 php7.4-fpm php7.4-mysql php7.4-cli php7.4-common php7.4-json php7.4-opcache php7.4-readline php7.4-mbstring php7.4-xml php7.4-gd php7.4-curl
-
+RUN apt-get update && \
+    apt-get install -y wget php-fpm php-mysql curl && \
+    wget https://wordpress.org/latest.tar.gz && \
+    mkdir /var/www && \
+    tar -xzf latest.tar.gz -C /var/www
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+    chmod +x wp-cli.phar && \
+    mv wp-cli.phar /usr/local/bin/wp
+	
 # 워드프레스 설치를 위한 디렉토리 생성 및 최신 버전 다운로드
 RUN mkdir -p /var/www
 RUN wget https://wordpress.org/latest.tar.gz
